--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,7 +4,10 @@ WORKDIR /usr/src/backend
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install && \
+       rsync
+
+ADD init.sh /init.sh
 
 COPY . .
 
