--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "axios": "^0.19.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
