--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,7 @@ frontend/.env.production.local
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
+
+# IDE metadata
+.DS_Store
+.idea
