--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.26.5"
