--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^5.9.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "socker.io": "0.0.0-alpha-beta",
+    "socket.io": "^2.3.0",
     "validator": "^13.0.0"
   },
   "devDependencies": {
