--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.26.5"
+    "sass": "^1.26.5",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
